--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -1,10 +1,15 @@
 html, body {
+    width: 320px;
     margin: 0;
     padding: 0;
-    height: 100%;
-    width: 100%;
-    overflow: hidden; 
+    background: #111;
+    color: #fff;
     background-color: #282828;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
 }
 
 @tailwind base;
